[tool.poetry]
name = "llm_store"
version = "0.1.2"
description = "LLM Gateway Service"
authors = ["shenyubao <shenyubao@yucekj.com>"]
readme = "README.md"
packages = [{include = "llm_store"}]


[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.54.4"
baserowsdk = "^0.0.9"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"
wheel = "^0.41.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
